[ID# 81248402] Fix widows on iphone and ipad view

--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -319,6 +319,9 @@ footer {
     .col-md-5 {
       padding-left: 0 !important;
     }
+    .col-md-7 {
+      padding: 0;
+    }
   }
   #video-popup {
     .modal-dialog {
@@ -355,6 +358,9 @@ footer {
     background: darken($white, 3%) !important;
     h2 {
       margin: 0;
+    }
+    b {
+      font-size: 16px;
     }
   }
   #team {
@@ -418,9 +424,10 @@ and (orientation : portrait) {
   .content {
     margin-top: 30%;
   }
-  h1 {font-size: 38px;}
+  h1 {font-size: 36px;}
   h2 {font-size: 28px;}
   h3 {font-size: 18px;}
+  p {font-size: 20px;}
   .btn {
     font-size: 14px !important;
     img {
@@ -428,10 +435,13 @@ and (orientation : portrait) {
     }
   }
   #features {
+    padding: 50px 0;
     h2 {
       margin-bottom: 10px;
     }
-    padding: 50px 0;
+    .col-md-7 {
+      padding-right: 0;
+    }
   }
   #why {padding: 50px 0;}
   #team {
@@ -444,7 +454,7 @@ and (orientation : portrait) {
     }
   }
   #banner3 {
-    h2, p {
+    h1, p {
       color: darken($white, 100%) !important;
     }
   }
